1.0.16
Issue #1516 Sort-AppFoldersByDependencies can't handle twice the same app in the baseFolder
Issue #1519 Extract-AppFileToFolder doesn't extract internalsVisibleTo in app.json
Add parameter -SkipUpgrade to allow Run-AlValidation to skip upgrade if previousApps cannot be installed on current version
Issue #1522 Move files to correct positions

1.0.15
Use new Generic image location and SQL 2019 image as default (mcr.microsoft.com/businesscentral:{0}-0.1.0.25 is the latest with SQL 2017)
Issue #1469 Install-NavSipCryptoProvider cannot be executed twice
Add new function UploadImportAndApply-ConfigPackageInBcContainer, which uses management APIs to Upload, Import and Apply a config package in a container
Add parameter -ImportTestDataInBcContainer in Run-AlPipeline to allow for overriding and supporting test data
Add configuration setting: timeStampServer (default timeStampServer for Sign-AppInBcContainer)
Add parameter timeStampServer to Sign-AppInBcContainer to allow overriding the timeStampServer
Fix Extract-AppFileToFolder to include missing properties and honor runtime version
Add parameter vsixFile to Run-AlPipeline
Add new function Run-AlCops to run AL cops in existing container
Add new function Run-AlValidation to run and end 2 end AL validation with multiple versions and multiple countries
Issue #1507 Sort-AppFilesByDependencies crashes if two different versions of the same app is specified
Issue #1496 Add ruleset parameter to Run-AlPipeline
Added new function Get-AlLanguageExtensionFromArtifacts to get path of .vsix file within artifacts
Issue #1506 Add parameter applicationInsightsKey to New-BcContainer and New-BcContainerTenant (note that this requires generic image version 1.0.1.0 or later)

1.0.14
Add parameter -features to Compile-AppInBcContainer to add support of the alc features parameter
Add parameter -bakFile to Restore-BcDatabaseFromArtifacts to allow restoring custom database using the artifact binaries